[badges.travis-ci]
branch = "master"
repository = "sdroege/gstreamer-sys"

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }

[dependencies.gstreamer-base-sys]
path = "../gstreamer-base-sys"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"

[features]
v1_2 = []
v1_4 = ["v1_2"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]
v1_10 = ["v1_8"]
v1_12 = ["v1_10"]
v1_14 = ["v1_12"]
dox = []

[lib]
name = "gstreamer_mpegts_sys"

[package]
authors = ["Russel Winder <russel@winder.org.uk>", "Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
description = "FFI bindings to libgstmpegts-1.0"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstmpegts-1.0"
name = "gstreamer-mpegts-sys"
readme = "README.md"
repository = "https://github.com/sdroege/gstreamer-sys"
version = "0.6.0"
