[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gstreamer-base-sys]
path = "../gstreamer-base-sys"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
v1_2 = ["gstreamer-sys/v1_2", "gstreamer-base-sys/v1_2"]
v1_4 = ["v1_2", "gstreamer-sys/v1_4", "gstreamer-base-sys/v1_4"]
v1_6 = ["v1_4", "gstreamer-sys/v1_6", "gstreamer-base-sys/v1_6"]
v1_8 = ["v1_6", "gstreamer-sys/v1_8", "gstreamer-base-sys/v1_8"]
v1_10 = ["v1_8", "gstreamer-sys/v1_10", "gstreamer-base-sys/v1_10"]
v1_12 = ["v1_10", "gstreamer-sys/v1_12", "gstreamer-base-sys/v1_12"]
v1_14 = ["v1_12", "gstreamer-sys/v1_14", "gstreamer-base-sys/v1_14"]
v1_16 = ["v1_14", "gstreamer-sys/v1_16", "gstreamer-base-sys/v1_16"]
dox = ["v1_16"]

[lib]
name = "gstreamer_mpegts_sys"

[package]
authors = ["Russel Winder <russel@winder.org.uk>", "Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
documentation = "https://slomo.pages.freedesktop.org/rustdocs/gstreamer-sys/gstreamer_mpegts_sys/"
description = "FFI bindings to libgstmpegts-1.0"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstmpegts-1.0"
name = "gstreamer-mpegts-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.9.0"

[package.metadata.docs.rs]
features = ["dox"]
