[package]
name = "gstreamer-mse"
authors = ["Sebastian Dröge <sebastian@centricular.com>", "Simon Wülker <simon.wuelker@arcor.de>"]
description = "Rust bindings for GStreamer MSE library"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://gstreamer.pages.freedesktop.org/gstreamer-rs/stable/latest/docs/gstreamer_mse/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true 

[dependencies]
gstreamer-mse-sys.workspace = true
gst = { workspace = true, features = ["v1_26"] }
glib.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = []
v1_28 = ["gst/v1_28", "gstreamer-mse-sys/v1_28"]
v1_30 = ["gst/v1_30", "gstreamer-mse-sys/v1_30", "v1_28"]
