[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v1_2 = ["gstreamer-sys/v1_2"]
v1_4 = ["v1_2", "gstreamer-sys/v1_4"]
v1_6 = ["v1_4", "gstreamer-sys/v1_6"]
v1_8 = ["v1_6", "gstreamer-sys/v1_8"]
v1_10 = ["v1_8", "gstreamer-sys/v1_10"]
v1_12 = ["v1_10", "gstreamer-sys/v1_12"]
v1_14 = ["v1_12", "gstreamer-sys/v1_14"]
v1_16 = ["v1_14", "gstreamer-sys/v1_16"]
dox = ["v1_16"]

[lib]
name = "gstreamer_net_sys"

[package]
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
description = "FFI bindings to libgstnet-1.0"
documentation = "https://slomo.pages.freedesktop.org/rustdocs/gstreamer-sys/gstreamer_net_sys/"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstnet-1.0"
name = "gstreamer-net-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.9.0"
[package.metadata.docs.rs]
features = ["dox"]
