[package]
name = "gstreamer-net"
version = "0.16.7"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for GStreamer Net library"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://gstreamer.freedesktop.org"
documentation = "https://gstreamer.pages.freedesktop.org/gstreamer-rs/gstreamer_net/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
build = "build.rs"

[dependencies]
glib-sys = "0.10"
gobject-sys = "0.10"
gstreamer-sys = { version = "0.9", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys.git", branch = "0.9", features = ["v1_8"] }
gstreamer-net-sys = { version = "0.9", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys.git", branch = "0.9", features = ["v1_8"] }
glib = "0.10"
gstreamer = { version = "0.16", path = "../gstreamer" }
gio = "0.9"

[build-dependencies]
gstreamer-rs-lgpl-docs = { version = "0.16", path = "../docs", optional = true }

[features]
default = []
v1_10 = ["gstreamer/v1_10", "gstreamer-net-sys/v1_10"]
v1_12 = ["gstreamer/v1_12", "gstreamer-net-sys/v1_12", "v1_10"]
v1_14 = ["gstreamer/v1_14", "gstreamer-net-sys/v1_14", "v1_12"]
v1_16 = ["gstreamer/v1_16", "gstreamer-net-sys/v1_16", "v1_14"]
v1_18 = ["gstreamer/v1_18", "gstreamer-net-sys/v1_18", "v1_16"]
embed-lgpl-docs = ["gstreamer-rs-lgpl-docs"]
purge-lgpl-docs = ["gstreamer-rs-lgpl-docs"]
dox = ["v1_18", "gstreamer-net-sys/dox", "glib/dox", "gio/dox", "gstreamer/dox"]

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]
