[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "0.9"
libc = "0.2"
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"

[dependencies.gstreamer-audio-sys]
path = "../gstreamer-audio-sys"

[dependencies.gstreamer-video-sys]
path = "../gstreamer-video-sys"

[dependencies.gstreamer-tag-sys]
path = "../gstreamer-tag-sys"

[features]
v1_0_10 = []
v1_10 = ["v1_8"]
v1_12 = ["v1_10"]
v1_2 = ["v1_0_10"]
v1_2_3 = ["v1_2"]
v1_4 = ["v1_2_3"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]

[lib]
name = "gstreamer_pbutils_sys"

[package]
build = "build.rs"
links = "gstpbutils-1.0"
name = "gstreamer-pbutils-sys"
version = "0.1.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
description = "FFI bindings to libgstpbutils-1.0"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
repository = "https://github.com/sdroege/gstreamer-sys"
license = "MIT"

include = [
    "src/*.rs",
    "Cargo.toml",
    "build.rs",
    "LICENSE",
]

[badges]
travis-ci = { repository = "sdroege/gstreamer-sys", branch = "master" }
