[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gstreamer-audio-sys]
path = "../gstreamer-audio-sys"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"

[dependencies.gstreamer-video-sys]
path = "../gstreamer-video-sys"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v1_2 = ["gstreamer-sys/v1_2", "gstreamer-audio-sys/v1_2", "gstreamer-video-sys/v1_2"]
v1_4 = ["v1_2", "gstreamer-sys/v1_4", "gstreamer-audio-sys/v1_4", "gstreamer-video-sys/v1_4"]
v1_6 = ["v1_4", "gstreamer-sys/v1_6", "gstreamer-audio-sys/v1_6", "gstreamer-video-sys/v1_6"]
v1_8 = ["v1_6", "gstreamer-sys/v1_8", "gstreamer-audio-sys/v1_8", "gstreamer-video-sys/v1_8"]
v1_10 = ["v1_8", "gstreamer-sys/v1_10", "gstreamer-audio-sys/v1_10", "gstreamer-video-sys/v1_10"]
v1_12 = ["v1_10", "gstreamer-sys/v1_12", "gstreamer-audio-sys/v1_12", "gstreamer-video-sys/v1_12"]
v1_14 = ["v1_12", "gstreamer-sys/v1_14", "gstreamer-audio-sys/v1_14", "gstreamer-video-sys/v1_14"]
v1_16 = ["v1_14", "gstreamer-sys/v1_16", "gstreamer-audio-sys/v1_16", "gstreamer-video-sys/v1_16"]
v1_18 = ["v1_16", "gstreamer-sys/v1_18", "gstreamer-audio-sys/v1_18", "gstreamer-video-sys/v1_18"]
dox = ["v1_18"]

[lib]
name = "gstreamer_pbutils_sys"

[package]
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
description = "FFI bindings to libgstpbutils-1.0"
documentation = "https://slomo.pages.freedesktop.org/rustdocs/gstreamer-sys/gstreamer_pbutils_sys/"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstpbutils-1.0"
name = "gstreamer-pbutils-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.9.0"
[package.metadata.docs.rs]
features = ["dox"]
