[package]
name = "gstreamer-pbutils"
version = "0.21.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for GStreamer Base Utils library"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://gstreamer.freedesktop.org"
documentation = "https://gstreamer.pages.freedesktop.org/gstreamer-rs/stable/latest/docs/gstreamer_pbutils/"
keywords = ["gstreamer", "multimedia", "audio", "pbutils", "gnome"]
edition = "2021"
rust-version = "1.70"

[dependencies]
libc = "0.2"
ffi = { package = "gstreamer-pbutils-sys", path = "sys", version = "0.21" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.18", version = "0.18" }
gst = { package = "gstreamer", path = "../gstreamer", version = "0.21" }
gst-video = { package = "gstreamer-video", path = "../gstreamer-video", version = "0.21" }
gst-audio = { package = "gstreamer-audio", path = "../gstreamer-audio", version = "0.21" }
thiserror = "1.0"
serde = { version = "1.0", optional = true }

[dev-dependencies]
gir-format-check = "0.1"
serde_json = "1.0"

[features]
default = []
v1_16 = ["gst/v1_16", "gst-audio/v1_16", "gst-video/v1_16", "ffi/v1_16"]
v1_18 = ["gst/v1_18", "gst-audio/v1_18", "gst-video/v1_18", "ffi/v1_18", "v1_16"]
v1_20 = ["gst/v1_20", "gst-audio/v1_20", "gst-video/v1_20", "ffi/v1_20", "v1_18"]
v1_22 = ["gst/v1_22", "gst-audio/v1_22", "gst-video/v1_22", "ffi/v1_22", "v1_20"]
v1_24 = ["gst/v1_24", "gst-audio/v1_24", "gst-video/v1_24", "ffi/v1_24", "v1_22"]
serde = ["dep:serde", "gst/serde"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
