[package]
name = "gstreamer-play"
version = "0.21.2"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for GStreamer Play library"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://gstreamer.freedesktop.org"
documentation = "https://gstreamer.pages.freedesktop.org/gstreamer-rs/stable/latest/docs/gstreamer_play/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
edition = "2021"
rust-version = "1.70"

[dependencies]
libc = "0.2"
ffi = { package = "gstreamer-play-sys", path = "sys", version = "0.21" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.18", version = "0.18" }
gst = { package = "gstreamer", path = "../gstreamer", version = "0.21", features = ["v1_20"] }
gst-video = { package = "gstreamer-video", path = "../gstreamer-video", version = "0.21", features = ["v1_20"] }

[dev-dependencies]
gir-format-check = "0.1"

[features]
v1_22 = ["gst/v1_22", "gst-video/v1_22", "ffi/v1_22"]
v1_24 = ["gst/v1_24", "gst-video/v1_24", "ffi/v1_24", "v1_22"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
