[package]
name = "gstreamer-play"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
description = "Rust bindings for GStreamer Play library"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://gstreamer.freedesktop.org/documentation/rust/stable/latest/docs/gstreamer_play/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
version.workspace = true
categories.workspace = true
repository.workspace = true 
homepage.workspace = true 
edition.workspace = true 
rust-version.workspace = true 

[dependencies]
libc = "0.2"
gstreamer-play-sys.workspace = true
glib.workspace = true
gst = { workspace = true, features = ["v1_20"] }
gst-video = { workspace = true, features = ["v1_20"] }

[dev-dependencies]
gir-format-check = "0.1"

[features]
v1_22 = ["gst/v1_22", "gst-video/v1_22", "gstreamer-play-sys/v1_22"]
v1_24 = ["gst/v1_24", "gst-video/v1_24", "gstreamer-play-sys/v1_24", "v1_22"]
v1_26 = ["gst/v1_26", "gst-video/v1_26", "gstreamer-play-sys/v1_26", "v1_24"]
v1_28 = ["gst/v1_28", "gst-video/v1_28", "gstreamer-play-sys/v1_28", "v1_26"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
