[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"

[dependencies.gstreamer-video-sys]
path = "../gstreamer-video-sys"

[features]
v1_12 = []
dox = []

[lib]
name = "gstreamer_player_sys"

[package]
build = "build.rs"
links = "gstplayer-1.0"
name = "gstreamer-player-sys"
version = "0.4.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
description = "FFI bindings to libgstplayer-1.0"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
repository = "https://github.com/sdroege/gstreamer-sys"
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "sdroege/gstreamer-sys", branch = "master" }
