[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"
features = ["v1_12"]

[dependencies.gstreamer-video-sys]
path = "../gstreamer-video-sys"
features = ["v1_12"]

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
v1_14 = ["gstreamer-sys/v1_14", "gstreamer-video-sys/v1_14"]
v1_16 = ["v1_14", "gstreamer-sys/v1_16", "gstreamer-video-sys/v1_16"]
dox = ["v1_16"]

[lib]
name = "gstreamer_player_sys"

[package]
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
description = "FFI bindings to libgstplayer-1.0"
documentation = "https://slomo.pages.freedesktop.org/rustdocs/gstreamer-sys/gstreamer_player_sys/"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstplayer-1.0"
name = "gstreamer-player-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.9.0"

[package.metadata.docs.rs]
features = ["dox"]
