[package]
name = "gstreamer-player"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
description = "Rust bindings for GStreamer Player library"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://gstreamer.freedesktop.org/documentation/rust/stable/latest/docs/gstreamer_player/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
version.workspace = true
categories.workspace = true
repository.workspace = true 
homepage.workspace = true 
edition.workspace = true 
rust-version.workspace = true 

[dependencies]
libc = "0.2"
gstreamer-player-sys.workspace = true
glib.workspace = true
gst.workspace = true
gst-video.workspace = true

[dev-dependencies]
gir-format-check = "0.1"

[features]
default = []
v1_16 = ["gst/v1_16", "gst-video/v1_16", "gstreamer-player-sys/v1_16"]
v1_18 = ["gst/v1_18", "gst-video/v1_18", "gstreamer-player-sys/v1_18", "v1_16"]
v1_20 = ["gst/v1_20", "gst-video/v1_20", "gstreamer-player-sys/v1_20", "v1_18"]
v1_22 = ["gst/v1_22", "gst-video/v1_22", "gstreamer-player-sys/v1_22", "v1_20"]
v1_24 = ["gst/v1_24", "gst-video/v1_24", "gstreamer-player-sys/v1_24", "v1_22"]
v1_26 = ["gst/v1_26", "gst-video/v1_26", "gstreamer-player-sys/v1_26", "v1_24"]
v1_28 = ["gst/v1_28", "gst-video/v1_28", "gstreamer-player-sys/v1_28", "v1_26"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
