[package]
name = "gstreamer-rtp"
version = "0.17.3"
authors = ["Mathieu Duponchelle <mathieu@centricular.com>", "Sebastian Dröge <sebastian@centricular.com>"]
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for GStreamer Rtp library"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://gstreamer.freedesktop.org"
documentation = "https://gstreamer.pages.freedesktop.org/gstreamer-rs/stable/latest/docs/gstreamer_rtp/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
edition = "2018"

[dependencies]
bitflags = "1.0"
once_cell = "1.0"
ffi = { package = "gstreamer-rtp-sys", version = "0.17", path = "sys", features = ["v1_8"] }
glib = { version = "0.14" }
gst = { package = "gstreamer", version = "0.17", path = "../gstreamer" }

[features]
default = []
v1_10 = ["gst/v1_10", "ffi/v1_10"]
v1_12 = ["gst/v1_12", "ffi/v1_12", "v1_10"]
v1_14 = ["gst/v1_14", "ffi/v1_14", "v1_12"]
v1_16 = ["gst/v1_16", "ffi/v1_16", "v1_14"]
v1_18 = ["gst/v1_18", "ffi/v1_18", "v1_16"]
v1_20 = ["gst/v1_20", "ffi/v1_20", "v1_18"]
dox = ["v1_20", "ffi/dox", "glib/dox", "gst/dox"]

[package.metadata.docs.rs]
features = ["dox"]
